--- a/public/index.html
+++ b/public/index.html
@@ -1,91 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="style.css" />
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clonex Tracker</title>
+    <title>Clonex Tracker - Authentication</title>
+    <!-- Bootstrap CSS (optional but gives you a professional look) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
 </head>
-<body class="bg-light">
-<div class="container py-4">
-    <h2 class="mb-4">💊 Clonex Tracker</h2>
-    <button id="toggleDarkMode" class="btn btn-sm btn-outline-dark float-end">🌙 Dark Mode</button>
-
-
-    <!-- Form -->
-    <form id="clonexForm" class="row g-2 align-items-center mb-4">
-        <div class="col-auto">
-            <input type="number" step="0.001" class="form-control" id="dosage" placeholder="Dosage (mg)" min="0.1" required />
+<body>
+<div class="container auth-container">
+    <h1 class="text-center mb-4">Clonex Tracker</h1>
+    <div id="authMessage" class="alert d-none text-center" role="alert"></div>
+    <!-- Navigation Tabs -->
+    <ul class="nav nav-tabs mb-4" id="authTab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#login" type="button" role="tab" aria-controls="login" aria-selected="true">
+                Login
+            </button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="nav-link" id="register-tab" data-bs-toggle="tab" data-bs-target="#register" type="button" role="tab" aria-controls="register" aria-selected="false">
+                Register
+            </button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="nav-link" id="forgot-tab" data-bs-toggle="tab" data-bs-target="#forgot" type="button" role="tab" aria-controls="forgot" aria-selected="false">
+                Forgot Password
+            </button>
+        </li>
+    </ul>
+    <!-- Tab Contents -->
+    <div class="tab-content">
+        <!-- Login Form -->
+        <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
+            <div id="loginError" class="alert alert-danger d-none" role="alert"></div>
+            <form id="loginForm" class="mt-3">
+                <div class="mb-3">
+                    <label for="loginEmail" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="loginEmail" placeholder="Enter your email" required />
+                </div>
+                <div class="mb-3">
+                    <label for="loginPassword" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="loginPassword" placeholder="Enter your password" required />
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Login</button>
+            </form>
         </div>
-        <div class="col-auto">
-            <div class="input-group">
-                <input type="datetime-local" class="form-control" id="takenAt" required />
-                <button type="button" class="btn btn-outline-secondary" id="nowBtn" title="Set to Now">Now</button>
-            </div>
+        <!-- Registration Form -->
+        <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
+            <form id="registerForm" class="mt-3">
+                <div class="mb-3">
+                    <label for="registerName" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="registerName" placeholder="Your Name" required />
+                </div>
+                <div class="mb-3">
+                    <label for="registerEmail" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="registerEmail" placeholder="Enter your email" required />
+                </div>
+                <div class="mb-3">
+                    <label for="registerPassword" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="registerPassword" placeholder="Choose a password" required />
+                </div>
+                <button type="submit" class="btn btn-success w-100">Register</button>
+            </form>
         </div>
-        <div class="col-auto">
-            <input type="text" class="form-control" id="reason" placeholder="Reason" />
+        <!-- Forgot Password Form (Placeholder) -->
+        <div class="tab-pane fade" id="forgot" role="tabpanel" aria-labelledby="forgot-tab">
+            <form id="forgotForm" class="mt-3">
+                <div class="mb-3">
+                    <label for="forgotEmail" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="forgotEmail" placeholder="Enter your email" required />
+                </div>
+                <button type="submit" class="btn btn-warning w-100">Reset Password</button>
+                <p class="mt-2 text-muted"><small>This feature is coming soon.</small></p>
+            </form>
         </div>
-        <div class="col-auto">
-            <input type="text" class="form-control" id="comments" placeholder="Comments" />
-        </div>
-        <div class="col-auto">
-            <button type="submit" class="btn btn-primary">Add</button>
-        </div>
-    </form>
-
-    <div id="statsBox" class="alert alert-info" role="alert">
-        Loading stats...
     </div>
-
-    <div class="d-flex flex-wrap align-items-center gap-2 mb-3">
-        <!-- Date filters -->
-        <input type="date" class="form-control" id="filterFrom" placeholder="From date" style="max-width: 150px;" />
-        <input type="date" class="form-control" id="filterTo" placeholder="To date" style="max-width: 150px;" />
-
-        <!-- Dosage filters -->
-        <input type="number" step="0.01" class="form-control" id="filterDosageFrom" placeholder="min" style="max-width: 120px;" />
-        <input type="number" step="0.01" class="form-control" id="filterDosageTo" placeholder="max" style="max-width: 120px;" />
-
-        <!-- Reason and Comment filters -->
-        <input type="text" class="form-control" id="filterReason" placeholder="Reason contains" style="max-width: 160px;" />
-        <input type="text" class="form-control" id="filterComment" placeholder="Comment contains" style="max-width: 160px;" />
-
-        <!-- Buttons -->
-        <button type="button" class="btn btn-outline-primary" id="filterBtn">Filter</button>
-        <button type="button" class="btn btn-outline-secondary" id="clearFilterBtn">Clear</button>
-    </div>
-    <div id="filterStatsBox" class="alert alert-warning d-none" role="alert">
-    </div>
-
-    <div class="mb-2">
-        <button class="btn btn-success" id="exportCsvBtn">⬇️ Export to CSV</button>
-    </div>
-
-
-    <!-- List -->
-    <table class="table table-bordered table-hover" id="entriesTable">
-        <thead class="table-light">
-        <tr>
-            <th>Dosage</th>
-            <th>Taken At</th>
-            <th>Reason</th>
-            <th>Comments</th>
-            <th>Actions</th>
-        </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-
-    <h5 class="mt-5">📈 Dosage Over Time</h5>
-    <canvas id="dosageChart" height="100"></canvas>
-
-
 </div>
 
+<!-- jQuery and Bootstrap Bundle JS (includes Popper) -->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<script src="app.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Custom login JS -->
+<script src="js/login.js"></script>
 </body>
 </html>
