--- a/public/activate.html
+++ b/public/activate.html
@@ -2,42 +2,60 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Account Activation</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-</head>
-<body class="bg-light">
-<div class="container text-center mt-5">
-    <h2 class="mb-4">Clonex Tracker</h2>
-    <div id="message" class="alert" role="alert">Checking activation...</div>
-    <a href="index.html" class="btn btn-primary d-none" id="goToLogin">Go to Login</a>
-</div>
-
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        const params = new URLSearchParams(window.location.search);
-        const token = params.get('token');
-
-        const messageEl = document.getElementById('message');
-
-        if (!token) {
-            messageEl.classList.add('alert', 'alert-danger');
-            messageEl.textContent = '⚠️ Invalid or missing token in the URL.';
-            return;
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Clonex Tracker – Activation Successful</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', sans-serif;
+            background: linear-gradient(to right, #ece9e6, #ffffff);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            text-align: center;
         }
 
+        .card {
+            background-color: #f8f8f8;
+            padding: 2rem 3rem;
+            border-radius: 1rem;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            max-width: 400px;
+        }
 
-        fetch(`/auth/activate?token=${token}`)
-            .then(res => res.json())
-            .then(data => {
-                document.getElementById('message').classList.add('alert-success');
-                document.getElementById('message').textContent = data.message;
-                document.getElementById('goToLogin').classList.remove('d-none');
-            })
-            .catch(() => {
-                document.getElementById('message').classList.add('alert-danger');
-                document.getElementById('message').textContent = '⚠️ Activation failed. The link may be invalid or expired.';
-            });
-    });
-</script>
+        h1 {
+            color: #2c3e50;
+            margin-bottom: 1rem;
+        }
+
+        p {
+            color: #444;
+            margin-bottom: 2rem;
+        }
+
+        a.button {
+            text-decoration: none;
+            color: white;
+            background-color: #4CAF50;
+            padding: 0.8rem 1.6rem;
+            border-radius: 0.5rem;
+            font-weight: bold;
+            transition: background-color 0.3s;
+        }
+
+        a.button:hover {
+            background-color: #45a049;
+        }
+    </style>
+</head>
+<body>
+<div class="card">
+    <h1>🎉 Registration Successful!</h1>
+    <p>Your email has been successfully verified.<br>
+        You can now log in and start tracking with Clonex Tracker.</p>
+    <a href="/" class="button">Go to Login</a>
+</div>
 </body>
 </html>
