--- a/public/clonex.html
+++ b/public/clonex.html
@@ -81,6 +81,16 @@
 
     <h5 class="mt-5">📈 Dosage Over Time</h5>
     <canvas id="dosageChart" height="100"></canvas>
+    <h5 class="mt-5">📊 Daily Dosage Summary</h5>
+    <select id="dailyRange" class="form-select mb-2" style="max-width: 200px;">
+        <option value="all">📅 All Time</option>
+        <option value="7">📆 Last 7 Days</option>
+        <option value="30">🗓️ Last 30 Days</option>
+        <option value="180">🗓️ Last 6 Months</option>
+        <option value="365">📅 Last Year</option>
+    </select>
+    <canvas id="dailyChart" height="100"></canvas>
+
 
 
 </div>
