Add-Average-Per-Day-Calculation-29

--- a/public/clonex.html
+++ b/public/clonex.html
@@ -96,6 +96,8 @@
         <option value="365">📅 Last Year</option>
     </select>
     <canvas id="dailyChart" height="100"></canvas>
+    <div id="dailyAverageBox" class="alert alert-secondary mt-3 d-none"></div>
+
 
 
 
