--- a/public/clonex.html
+++ b/public/clonex.html
@@ -4,15 +4,28 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clonex Tracker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body class="bg-light">
+<div class="d-flex justify-content-between align-items-center px-3 pt-3">
+    <h1 class="m-0"></h1>
+    <div class="dropdown">
+        <button class="btn btn-outline-light dropdown-toggle" type="button" id="userMenu" data-bs-toggle="dropdown" aria-expanded="false">
+            👤 Hen
+        </button>
+        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
+            <li><a class="dropdown-item" href="#" id="exportCsvBtn">⬇️ Export Data</a></li>
+            <li><a class="dropdown-item" href="#" id="importCsvBtn">⬆️ Import Data</a></li>
+            <li><a class="dropdown-item" href="#">⚙️ Settings</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item text-danger" href="#" id="logoutBtn">🚪 Logout</a></li>
+        </ul>
+    </div>
+</div>
+
 <div class="container py-4">
     <h2 class="mb-4">💊 Clonex Tracker</h2>
     <button id="toggleDarkMode" class="btn btn-sm btn-outline-dark float-end">🌙 Dark Mode</button>
-    <button id="logoutBtn" class="btn btn-outline-danger btn-sm">Logout</button>
-
 
     <!-- Form -->
     <form id="clonexForm" class="row g-2 align-items-center mb-4">
@@ -59,17 +72,6 @@
     </div>
     <div id="filterStatsBox" class="alert alert-warning d-none" role="alert">
     </div>
-
-    <div class="mb-2">
-        <button class="btn btn-success" id="exportCsvBtn">⬇️ Export to CSV</button>
-    </div>
-
-    <div class="mb-3">
-        <button class="btn btn-warning" id="importCsvBtn">⬆️ Import from CSV</button>
-        <input type="file" id="csvFileInput" accept=".csv" style="display: none;" />
-    </div>
-
-
 
     <!-- List -->
     <table class="table table-bordered table-hover" id="entriesTable">
@@ -137,6 +139,7 @@
 <script src="./js/clonex.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<input type="file" id="csvFileInput" accept=".csv" style="display: none" />
 
 </body>
 </html>
