--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="dark-mode">
 <div class="container auth-container">
     <h1 class="text-center mb-4">Clonex Tracker</h1>
     <div id="authMessage" class="alert d-none text-center" role="alert"></div>
