--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <!-- Bootstrap CSS (optional but gives you a professional look) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
+
 </head>
-<body class="dark-mode">
+<body>
 <div class="container auth-container">
     <h1 class="text-center mb-4">Clonex Tracker</h1>
     <div id="authMessage" class="alert d-none text-center" role="alert"></div>
