--- a/public/clonex.html
+++ b/public/clonex.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
+
 </head>
 <body class="bg-light">
 <div class="d-flex justify-content-between align-items-center px-3 pt-3">
@@ -34,7 +36,7 @@
         </div>
         <div class="col-auto">
             <div class="input-group">
-                <input type="datetime-local" class="form-control" id="takenAt" required />
+                <input type="text" class="form-control" id="entryTakenAt" placeholder="YYYY-MM-DD HH:MM" required />
                 <button type="button" class="btn btn-outline-secondary" id="nowBtn" title="Set to Now">Now</button>
             </div>
         </div>
@@ -141,8 +143,8 @@
     </div>
 </div>
 
-
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script src="./js/clonex.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
