--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Clonex Tracker - Authentication</title>
     <!-- Bootstrap CSS (optional but gives you a professional look) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
     <link rel="stylesheet" href="style.css" />
 
 </head>
@@ -84,6 +85,7 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Custom login JS -->
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script src="js/login.js"></script>
 </body>
 </html>
