--- a/public/clonex.html
+++ b/public/clonex.html
@@ -18,7 +18,9 @@
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
             <li><a class="dropdown-item" href="#" id="exportCsvBtn">⬇️ Export Data</a></li>
             <li><a class="dropdown-item" href="#" id="importCsvBtn">⬆️ Import Data</a></li>
-            <li><a class="dropdown-item" href="#">⚙️ Settings</a></li>
+            <li>
+            <button class="dropdown-item" onclick="settings()">⚙️ Settings</button>
+            </li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item text-danger" href="#" id="logoutBtn">🚪 Logout</a></li>
         </ul>
