Settings – change password #46

--- a/public/clonex.html
+++ b/public/clonex.html
@@ -13,8 +13,9 @@
     <h1 class="m-0"></h1>
     <div class="dropdown">
         <button class="btn btn-outline-light dropdown-toggle" type="button" id="userMenu" data-bs-toggle="dropdown" aria-expanded="false">
-            👤 Hen
+            👤 <span id="userNameDisplay"></span>
         </button>
+
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
             <li><a class="dropdown-item" href="#" id="exportCsvBtn">⬇️ Export Data</a></li>
             <li><a class="dropdown-item" href="#" id="importCsvBtn">⬆️ Import Data</a></li>
