Settings-–-save-new-time-format-#48

--- a/public/clonex.html
+++ b/public/clonex.html
@@ -19,7 +19,7 @@
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenu">
             <li><a class="dropdown-item" href="#" id="exportCsvBtn">⬇️ Export Data</a></li>
             <li><a class="dropdown-item" href="#" id="importCsvBtn">⬆️ Import Data</a></li>
-            <li>
+            <li><a class="dropdown-item" href="#" id="toggleDarkMode">🌙 Dark Mode</a></li>
             <button class="dropdown-item" onclick="settings()">⚙️ Settings</button>
             </li>
             <li><hr class="dropdown-divider"></li>
@@ -30,8 +30,6 @@
 
 <div class="container py-4">
     <h2 class="mb-4">💊 Clonex Tracker</h2>
-    <button id="toggleDarkMode" class="btn btn-sm btn-outline-dark float-end">🌙 Dark Mode</button>
-
     <!-- Form -->
     <form id="clonexForm" class="row g-2 align-items-center mb-4">
         <div class="col-auto">
