Change Name to benzo

--- a/public/activate.html
+++ b/public/activate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Clonex Tracker – Activation Successful</title>
+    <title>Benzos Tracker – Activation Successful</title>
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
@@ -54,7 +54,7 @@
 <div class="card">
     <h1>🎉 Registration Successful!</h1>
     <p>Your email has been successfully verified.<br>
-        You can now log in and start tracking with Clonex Tracker.</p>
+        You can now log in and start tracking with Benzos Tracker.</p>
     <a href="/" class="button">Go to Login</a>
 </div>
 </body>
