--- a/public/benzos.html
+++ b/public/benzos.html
@@ -29,9 +29,9 @@
 </div>
 
 <div class="container py-4">
-    <h2 class="mb-4">💊 Clonex Tracker</h2>
+    <h2 id="benzosTitle" class="mb-4"></h2>
     <!-- Form -->
-    <form id="clonexForm" class="row g-2 align-items-center mb-4">
+    <form id="benzosForm" class="row g-2 align-items-center mb-4">
         <div class="col-auto">
             <input type="number" step="0.001" class="form-control" id="dosage" placeholder="Dosage (mg)" min="0.1" required />
         </div>
@@ -146,7 +146,7 @@
 
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-<script src="./js/clonex.js"></script>
+<script src="js/benzos.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <input type="file" id="csvFileInput" accept=".csv" style="display: none" />
