--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clonex Tracker - Authentication</title>
+    <title>Benzos Tracker - Authentication</title>
     <!-- Bootstrap CSS (optional but gives you a professional look) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container auth-container">
-    <h1 class="text-center mb-4">Clonex Tracker</h1>
+    <h1 class="text-center mb-4">Benzos Tracker</h1>
     <div id="authMessage" class="alert d-none text-center" role="alert"></div>
     <!-- Navigation Tabs -->
     <ul class="nav nav-tabs mb-4" id="authTab" role="tablist">
@@ -63,6 +63,10 @@
                 <div class="mb-3">
                     <label for="registerPassword" class="form-label">Password</label>
                     <input type="password" class="form-control" id="registerPassword" placeholder="Choose a password" required />
+                </div>
+                <div class="mb-3">
+                    <label for="registerPassword" class="form-label">Benzodiazepines Type</label>
+                    <input type="benzosType" class="form-control" id="benzos" placeholder="Enter your Benzodiazepines" required />
                 </div>
                 <button type="submit" class="btn btn-success w-100">Register</button>
             </form>
