--- a/public/login.html
+++ b/public/login.html
@@ -63,6 +63,13 @@
                 <div class="mb-3">
                     <label for="registerPassword" class="form-label">Password</label>
                     <input type="password" class="form-control" id="registerPassword" placeholder="Choose a password" required />
+                    <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm new password">
+
+                    <div class="password-requirements">
+                        <small style="color: #6b7280; display: block; margin-top: 8px;">
+                            Password must be at least 8 characters long and contain at least one uppercase letter, one lowercase letter, and one number.
+                        </small>
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label for="registerPassword" class="form-label">Benzodiazepines Type</label>
