--- a/public/afterRegistration.html
+++ b/public/afterRegistration.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Clonex Tracker – Activation Successful</title>
+    <title>Benzo Tracker – Activation Successful</title>
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
