--- a/public/activate.html
+++ b/public/activate.html
@@ -108,6 +108,11 @@
                 resultDiv.textContent = data.message || '✅ Activated!';
                 resultDiv.style.color = 'green';
             })
+            .then(() => {
+                setTimeout(() => {
+                    window.location.href = 'login.html';
+                }, 500);
+            })
             .catch(() => {
                 resultDiv.textContent = '❌ Activation failed.';
                 resultDiv.style.color = 'red';
