--- a/public/login.html
+++ b/public/login.html
@@ -92,6 +92,28 @@
     </div>
 </div>
 
+<!-- Registration Success Modal -->
+<div class="modal fade" id="registrationSuccessModal" tabindex="-1" aria-labelledby="registrationSuccessLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content border-success">
+            <div class="modal-header bg-success text-white">
+                <h5 class="modal-title" id="registrationSuccessLabel">🎉 Registration Successful!</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body text-center">
+                <p>✅ We've sent an <strong>activation code</strong> to your email.</p>
+                <p>📬 Check your inbox for an email from <strong>Benzos Tracker</strong>.</p>
+                <p>💡 Click the link and enter your email + code on the activation screen.</p>
+                <hr />
+                <button class="btn btn-outline-success" data-bs-dismiss="modal">Close</button>
+                <a href="activate.html" class="btn btn-success ms-2">Go to Activation</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 <!-- jQuery and Bootstrap Bundle JS (includes Popper) -->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
