--- a/public/login.html
+++ b/public/login.html
@@ -27,28 +27,44 @@
             </button>
         </li>
         <li class="nav-item" role="presentation">
-            <button class="nav-link" id="forgot-tab" data-bs-toggle="tab" data-bs-target="#forgot" type="button" role="tab" aria-controls="forgot" aria-selected="false">
+            <button class="nav-link" id="forgot-tab" data-bs-toggle="tab" data-bs-target="#forgot" type="button" role="tab" aria-controls="forgot" aria-selected="false"  hidden="true">
                 Forgot Password
             </button>
         </li>
     </ul>
+
+    <form id="loginForm" class="mt-3">
+        <div class="mb-3">
+            <label for="loginEmail" class="form-label">Email</label>
+            <input type="email" class="form-control" id="loginEmail" placeholder="Enter your email" required />
+        </div>
+        <div class="mb-3">
+            <label for="loginPassword" class="form-label">Password</label>
+            <input type="password" class="form-control" id="loginPassword" placeholder="Enter your password" required />
+        </div>
+        <button type="submit" class="btn btn-primary w-100">Login</button>
+        <div class="text-center mt-2">
+            <a href="#" onclick="document.getElementById('forgot-tab').click()">Forgot Password?</a>
+        </div>
+    </form>
+
     <!-- Tab Contents -->
     <div class="tab-content">
         <!-- Login Form -->
-        <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
-            <div id="loginError" class="alert alert-danger d-none" role="alert"></div>
-            <form id="loginForm" class="mt-3">
-                <div class="mb-3">
-                    <label for="loginEmail" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="loginEmail" placeholder="Enter your email" required />
-                </div>
-                <div class="mb-3">
-                    <label for="loginPassword" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="loginPassword" placeholder="Enter your password" required />
-                </div>
-                <button type="submit" class="btn btn-primary w-100">Login</button>
-            </form>
-        </div>
+<!--        <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">-->
+<!--            <div id="loginError" class="alert alert-danger d-none" role="alert"></div>-->
+<!--            <form id="loginForm" class="mt-3">-->
+<!--                <div class="mb-3">-->
+<!--                    <label for="loginEmail" class="form-label">Email</label>-->
+<!--                    <input type="email" class="form-control" id="loginEmail" placeholder="Enter your email" required />-->
+<!--                </div>-->
+<!--                <div class="mb-3">-->
+<!--                    <label for="loginPassword" class="form-label">Password</label>-->
+<!--                    <input type="password" class="form-control" id="loginPassword" placeholder="Enter your password" required />-->
+<!--                </div>-->
+<!--                <button type="submit" class="btn btn-primary w-100">Login</button>-->
+<!--            </form>-->
+<!--        </div>-->
         <!-- Registration Form -->
         <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
             <form id="registerForm" class="mt-3">
@@ -80,13 +96,35 @@
         </div>
         <!-- Forgot Password Form (Placeholder) -->
         <div class="tab-pane fade" id="forgot" role="tabpanel" aria-labelledby="forgot-tab">
+            <div class="text-center mb-4">
+                <div class="forgot-icon mb-3">
+                    🔑
+                </div>
+                <h4>Reset Your Password</h4>
+                <p class="text-muted">Enter your email address and we'll send you a reset link</p>
+            </div>
+
             <form id="forgotForm" class="mt-3">
                 <div class="mb-3">
-                    <label for="forgotEmail" class="form-label">Email</label>
+                    <label for="forgotEmail" class="form-label">Email Address</label>
                     <input type="email" class="form-control" id="forgotEmail" placeholder="Enter your email" required />
                 </div>
-                <button type="submit" class="btn btn-warning w-100">Reset Password</button>
-                <p class="mt-2 text-muted"><small>This feature is coming soon.</small></p>
+
+                <button type="submit" class="btn btn-primary w-100 mb-3">
+                    📧 Send Reset Link
+                </button>
+
+                <div class="alert alert-info">
+                    <small>
+                        <strong>Note:</strong> If your email isn't registered in our system, no email will be sent for security reasons.
+                    </small>
+                </div>
+
+                <div class="text-center mt-3">
+                    <small class="text-muted">
+                        <a href="#" onclick="hideForgotPassword()">Close Reset Password</a>
+                    </small>
+                </div>
             </form>
         </div>
     </div>
