--- a/public/login.html
+++ b/public/login.html
@@ -4,67 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Benzos Tracker - Authentication</title>
-    <!-- Bootstrap CSS (optional but gives you a professional look) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
     <link rel="stylesheet" href="style.css" />
-
 </head>
 <body>
 <div class="container auth-container">
     <h1 class="text-center mb-4">Benzos Tracker</h1>
     <div id="authMessage" class="alert d-none text-center" role="alert"></div>
+
     <!-- Navigation Tabs -->
     <ul class="nav nav-tabs mb-4" id="authTab" role="tablist">
         <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#login" type="button" role="tab" aria-controls="login" aria-selected="true">
-                Login
-            </button>
+            <button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#login" type="button" role="tab" aria-controls="login" aria-selected="true">Login</button>
         </li>
         <li class="nav-item" role="presentation">
-            <button class="nav-link" id="register-tab" data-bs-toggle="tab" data-bs-target="#register" type="button" role="tab" aria-controls="register" aria-selected="false">
-                Register
-            </button>
-        </li>
-        <li class="nav-item" role="presentation">
-            <button class="nav-link" id="forgot-tab" data-bs-toggle="tab" data-bs-target="#forgot" type="button" role="tab" aria-controls="forgot" aria-selected="false"  hidden="true">
-                Forgot Password
-            </button>
+            <button class="nav-link" id="register-tab" data-bs-toggle="tab" data-bs-target="#register" type="button" role="tab" aria-controls="register" aria-selected="false">Register</button>
         </li>
     </ul>
 
-    <form id="loginForm" class="mt-3">
-        <div class="mb-3">
-            <label for="loginEmail" class="form-label">Email</label>
-            <input type="email" class="form-control" id="loginEmail" placeholder="Enter your email" required />
-        </div>
-        <div class="mb-3">
-            <label for="loginPassword" class="form-label">Password</label>
-            <input type="password" class="form-control" id="loginPassword" placeholder="Enter your password" required />
-        </div>
-        <button type="submit" class="btn btn-primary w-100">Login</button>
-        <div class="text-center mt-2">
-            <a href="#" onclick="document.getElementById('forgot-tab').click()">Forgot Password?</a>
-        </div>
-    </form>
-
     <!-- Tab Contents -->
     <div class="tab-content">
-        <!-- Login Form -->
-<!--        <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">-->
-<!--            <div id="loginError" class="alert alert-danger d-none" role="alert"></div>-->
-<!--            <form id="loginForm" class="mt-3">-->
-<!--                <div class="mb-3">-->
-<!--                    <label for="loginEmail" class="form-label">Email</label>-->
-<!--                    <input type="email" class="form-control" id="loginEmail" placeholder="Enter your email" required />-->
-<!--                </div>-->
-<!--                <div class="mb-3">-->
-<!--                    <label for="loginPassword" class="form-label">Password</label>-->
-<!--                    <input type="password" class="form-control" id="loginPassword" placeholder="Enter your password" required />-->
-<!--                </div>-->
-<!--                <button type="submit" class="btn btn-primary w-100">Login</button>-->
-<!--            </form>-->
-<!--        </div>-->
+
+        <!-- Login Tab Pane -->
+        <div class="tab-pane fade show active" id="login" role="tabpanel" aria-labelledby="login-tab">
+            <form id="loginForm" class="mt-3">
+                <div class="mb-3">
+                    <label for="loginEmail" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="loginEmail" placeholder="Enter your email" required />
+                </div>
+                <div class="mb-3">
+                    <label for="loginPassword" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="loginPassword" placeholder="Enter your password" required />
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Login</button>
+                <div class="text-center mt-2">
+                    <a href="#" onclick="showForgotPassword()">Forgot Password?</a>
+                </div>
+            </form>
+        </div>
+
         <!-- Registration Form -->
         <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
             <form id="registerForm" class="mt-3">
@@ -80,7 +59,6 @@
                     <label for="registerPassword" class="form-label">Password</label>
                     <input type="password" class="form-control" id="registerPassword" placeholder="Choose a password" required />
                     <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm new password">
-
                     <div class="password-requirements">
                         <small style="color: #6b7280; display: block; margin-top: 8px;">
                             Password must be at least 8 characters long and contain at least one uppercase letter, one lowercase letter, and one number.
@@ -89,44 +67,38 @@
                 </div>
                 <div class="mb-3">
                     <label for="registerPassword" class="form-label">Benzodiazepines Type</label>
-                    <input type="benzosType" class="form-control" id="benzos" placeholder="Enter your Benzodiazepines" required />
+                    <input type="text" class="form-control" id="benzos" placeholder="Enter your Benzodiazepines" required />
                 </div>
                 <button type="submit" class="btn btn-success w-100">Register</button>
             </form>
         </div>
-        <!-- Forgot Password Form (Placeholder) -->
-        <div class="tab-pane fade" id="forgot" role="tabpanel" aria-labelledby="forgot-tab">
-            <div class="text-center mb-4">
-                <div class="forgot-icon mb-3">
-                    🔑
-                </div>
-                <h4>Reset Your Password</h4>
-                <p class="text-muted">Enter your email address and we'll send you a reset link</p>
-            </div>
 
+        <!-- Forgot Password -->
+        <div class="tab-pane fade" id="forgot" role="tabpanel">
             <form id="forgotForm" class="mt-3">
+                <div class="text-center mb-4">
+                    <div class="forgot-icon mb-3">🔑</div>
+                    <h4>Reset Your Password</h4>
+                    <p class="text-muted">Enter your email address and we'll send you a reset link</p>
+                </div>
+
                 <div class="mb-3">
                     <label for="forgotEmail" class="form-label">Email Address</label>
                     <input type="email" class="form-control" id="forgotEmail" placeholder="Enter your email" required />
                 </div>
 
-                <button type="submit" class="btn btn-primary w-100 mb-3">
-                    📧 Send Reset Link
-                </button>
+                <button type="submit" class="btn btn-primary w-100 mb-3">📧 Send Reset Link</button>
 
                 <div class="alert alert-info">
-                    <small>
-                        <strong>Note:</strong> If your email isn't registered in our system, no email will be sent for security reasons.
-                    </small>
+                    <small><strong>Note:</strong> If your email isn't registered in our system, no email will be sent for security reasons.</small>
                 </div>
 
                 <div class="text-center mt-3">
-                    <small class="text-muted">
-                        <a href="#" onclick="hideForgotPassword()">Close Reset Password</a>
-                    </small>
+                    <small class="text-muted"><a href="#" onclick="hideForgotPassword()">Close Reset Password</a></small>
                 </div>
             </form>
         </div>
+
     </div>
 </div>
 
@@ -149,12 +121,8 @@
     </div>
 </div>
 
-
-
-<!-- jQuery and Bootstrap Bundle JS (includes Popper) -->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Custom login JS -->
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script src="js/login.js"></script>
 </body>
