--- a/public/benzos.html
+++ b/public/benzos.html
@@ -90,6 +90,7 @@
         <tbody></tbody>
     </table>
 
+
     <h5 class="mt-5">📈 Dosage Over Time</h5>
     <select id="dosageRange" class="form-select mb-3" style="max-width: 200px;">
         <option value="all">📅 All Time</option>
@@ -143,7 +144,10 @@
         </div>
     </div>
 </div>
-
+<hr class="mt-5 mb-3" />
+<footer class="text-center mb-3" style="color: blue;">
+    &copy; 2025 LiDa Software. All rights reserved.
+</footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script src="js/benzos.js"></script>
