--- a/public/login.html
+++ b/public/login.html
@@ -121,6 +121,10 @@
     </div>
 </div>
 
+<footer class="text-center mb-3" style="color: blue;">
+    &copy; 2025 LiDa Software. All rights reserved.
+</footer>
+
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
