--- a/public/benzos.html
+++ b/public/benzos.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="style.css" />
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
-
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body class="bg-light">
 <div class="d-flex justify-content-between align-items-center px-3 pt-3">
@@ -37,7 +36,7 @@
         </div>
         <div class="col-auto">
             <div class="input-group">
-                <input type="text" class="form-control" id="entryTakenAt" placeholder="YYYY-MM-DD HH:MM" required />
+                <input type="text"  id="entryTakenAt" placeholder="YYYY-MM-DD HH:MM" required />
                 <button type="button" class="btn btn-outline-secondary" id="nowBtn" title="Set to Now">Now</button>
             </div>
         </div>
