--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Track and manage benzodiazepines like Clonazepam, Diazepam, Lorazepam, Alprazolam. Taper planner, daily log, medication schedule, dosage history.">
+  <meta name="keywords" content="Benzo tracker, Clonazepam log, Diazepam dosage, Lorazepam tracker, Alprazolam log, medication schedule, benzodiazepines management, tapering, dose tracking.">
+
   <title>Benzodiazepines Tracker - Smart Medication Management</title>
   <style>
     * {
