--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="/icons/pl.png">
     <meta charset="UTF-8" />
     <title>Reset Your Password</title>
     <style>
