--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" href="/icons/pl.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Track and manage benzodiazepines like Clonazepam, Diazepam, Lorazepam, Alprazolam. Taper planner, daily log, medication schedule, dosage history.">
