--- a/public/benzos.html
+++ b/public/benzos.html
@@ -98,6 +98,7 @@
     <select id="dosageRange" class="form-select mb-3" style="max-width: 200px;">
         <option value="all">📅 All Time</option>
         <option value="7">📆 Last 7 Days</option>
+        <option value="14">📆 Last 14 Days</option>
         <option value="30">🗓️ Last 30 Days</option>
         <option value="180">🗓️ Last 6 Months</option>
         <option value="365">📅 Last Year</option>
@@ -107,6 +108,7 @@
     <select id="dailyRange" class="form-select mb-2" style="max-width: 200px;">
         <option value="all">📅 All Time</option>
         <option value="7">📆 Last 7 Days</option>
+        <option value="14">📆 Last 14 Days</option>
         <option value="30">🗓️ Last 30 Days</option>
         <option value="180">🗓️ Last 6 Months</option>
         <option value="365">📅 Last Year</option>
